# crypto-trending-mcp

./: main.py  pyproject.toml
